--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,18 @@
 #spring.jpa.properties.hibernate.format-sql=true
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2012Dialect
 
-spring.datasource.url=jdbc:mysql://localhost:3306/virtualpowerplant
-spring.datasource.username=root
-spring.datasource.password=password
+# DATABASE CONNECTION
+# local database
+#spring.datasource.url=jdbc:mysql://localhost:3306/virtualpowerplant
+# remote spring database
+spring.datasource.url=jdbc:mysql://virtualpowerplant.mysql.database.azure.com:3306/vpp?useSSL=true
+spring.datasource.username=azureadmin
+spring.datasource.password=Password1
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#server.port= 8080
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql= true
 spring.jpa.hibernate.ddl-auto = update
+
+
