--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,11 @@
-#spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-## Adding 'encrypt=true' and 'trustServerCertificate=true' to allow secure connection via SSL encryption
-#spring.datasource.url=jdbc:sqlserver://localhost;databaseName=VirtualPowerPlantDB;encrypt=true;trustServerCertificate=true
-#spring.datasource.username=sa
-#spring.datasource.password=password
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format-sql=true
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2012Dialect
-
 # DATABASE CONNECTION
 # local database
-#spring.datasource.url=jdbc:mysql://localhost:3306/virtualpowerplant
-# remote spring database
+    #spring.datasource.url=jdbc:mysql://localhost:3306/virtualpowerplant
+# remote azure database
 spring.datasource.url=jdbc:mysql://virtualpowerplant.mysql.database.azure.com:3306/vpp?useSSL=true
 spring.datasource.username=azureadmin
 spring.datasource.password=Password1
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#server.port= 8080
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql= true
